# ESP32_MP3_Decoder-1

./: .clang-format  .gitignore  CMakeLists.txt
components/MerusAudio/: CMakeLists.txt  MerusAudio.c
components/audio_player/: CMakeLists.txt  audio_player.c
components/audio_renderer/: CMakeLists.txt
components/bt_speaker/: _CMakeLists.txt  bt_app_core.c
components/common/: CMakeLists.txt
components/controls/: CMakeLists.txt  controls.c
components/controls/include/: controls.h
components/fdk-aac/: CMakeLists.txt
components/fdk-aac_decoder/: CMakeLists.txt
components/fdk_aac_decoder/: CMakeLists.txt
components/fifo/: CMakeLists.txt  spiram_fifo.c
components/http/: CMakeLists.txt
components/inih_port/: CMakeLists.txt
components/libfaad/: CMakeLists.txt
components/libfaad_decoder/: CMakeLists.txt
components/libm4a/: CMakeLists.txt
components/mad/: CMakeLists.txt
components/mp3_decoder/: CMakeLists.txt
components/mp3_decoder/include/: mp3_decoder.h
components/nghttp/: CMakeLists.txt
components/playlist/: CMakeLists.txt
components/ui/: CMakeLists.txt  ui.c
components/url_parser/: CMakeLists.txt
components/vector/: CMakeLists.txt
components/web_radio/: CMakeLists.txt  web_radio.c
main/: CMakeLists.txt  app_main.c
